# wordfeat

./: .gitignore  CMakeLists.txt  README.md  init
cmake/: Targets.cmake
cmake/Modules/: FindGFlags.cmake
data/: README.md  dev-2.feats  dev-2.input  dev-3.feats  dev-3.input  dev.input  small.feats
include/: common.h  common.hpp  utils.h  utils.hpp
include/utils/: io.hpp
src/: CMakeLists.txt  common.cpp  device_check.cu  feature_extract.cu  feature_extract_naive.cu  init.cu  wordfeat.cu  wordfeat_naive.cu
src/utils/: io.cpp
tools/: device_check.cu  wordfeat.cu  wordfeat_naive.cu
